Cleanup PacketOutConvertor
Update structure to follow best practices.

Change-Id: I957525431927593532e9b79b2d532135beb5fd4b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>